// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product RHOSAK config should apply an instances inventory configuration under hosts: filtered 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "lorem ipsum",
    },
    Object {
      "title": "t(curiosity-inventory.measurement_billing_provider, {\\"context\\":\\"none\\"})",
    },
    Object {
      "title": "t(curiosity-inventory.measurement, {\\"context\\":\\"Transfer-gibibytes\\",\\"total\\":\\"0.00035\\"})",
    },
    Object {
      "title": "t(curiosity-inventory.measurement, {\\"context\\":\\"Storage-gibibyte-months\\",\\"total\\":0})",
    },
    Object {
      "title": "t(curiosity-inventory.measurement, {\\"context\\":\\"Instance-hours\\",\\"total\\":\\"200\\"})",
    },
    Object {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"display_name\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"billing_provider\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": <Tooltip
        content="t(curiosity-inventory.header, {\\"context\\":\\"tooltip_Transfer-gibibytes\\"})"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        t(curiosity-inventory.header, {"context":"Transfer-gibibytes"})
      </Tooltip>,
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": <Tooltip
        content="t(curiosity-inventory.header, {\\"context\\":\\"tooltip_Storage-gibibyte-months\\"})"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        t(curiosity-inventory.header, {"context":"Storage-gibibyte-months"})
      </Tooltip>,
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"Instance-hours\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"last_seen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "Instance-hours": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"Instance-hours\\"})",
      "value": 200,
    },
    "Storage-gibibytes": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"Storage-gibibytes\\"})",
      "value": 1000.00123,
    },
    "Transfer-gibibytes": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"Transfer-gibibytes\\"})",
      "value": 0.0003456,
    },
    "display_name": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"display_name\\"})",
      "value": "lorem ipsum",
    },
    "last_seen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"last_seen\\"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product RHOSAK config should apply an instances inventory configuration under hosts: filtered, authorized 1`] = `
Object {
  "cells": Array [
    Object {
      "title": <Button
        component="a"
        href="/insights/inventory/XXXX-XXXX-XXXXX-XXXXX/"
        isInline={true}
        variant="link"
      >
        lorem ipsum
      </Button>,
    },
    Object {
      "title": "t(curiosity-inventory.measurement_billing_provider, {\\"context\\":\\"none\\"})",
    },
    Object {
      "title": "t(curiosity-inventory.measurement, {\\"context\\":\\"Transfer-gibibytes\\",\\"total\\":\\"0.00035\\"})",
    },
    Object {
      "title": "t(curiosity-inventory.measurement, {\\"context\\":\\"Storage-gibibyte-months\\",\\"total\\":0})",
    },
    Object {
      "title": "t(curiosity-inventory.measurement, {\\"context\\":\\"Instance-hours\\",\\"total\\":\\"200\\"})",
    },
    Object {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"display_name\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"billing_provider\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": <Tooltip
        content="t(curiosity-inventory.header, {\\"context\\":\\"tooltip_Transfer-gibibytes\\"})"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        t(curiosity-inventory.header, {"context":"Transfer-gibibytes"})
      </Tooltip>,
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": <Tooltip
        content="t(curiosity-inventory.header, {\\"context\\":\\"tooltip_Storage-gibibyte-months\\"})"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        t(curiosity-inventory.header, {"context":"Storage-gibibyte-months"})
      </Tooltip>,
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"Instance-hours\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"last_seen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "Instance-hours": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"Instance-hours\\"})",
      "value": 200,
    },
    "Storage-gibibytes": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"Storage-gibibytes\\"})",
      "value": 1000.00123,
    },
    "Transfer-gibibytes": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"Transfer-gibibytes\\"})",
      "value": 0.0003456,
    },
    "display_name": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"display_name\\"})",
      "value": "lorem ipsum",
    },
    "inventory_id": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventory_id\\"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"last_seen\\"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product RHOSAK config should apply graph configuration: filters 1`] = `
Object {
  "groupedFilters": Array [],
  "standaloneFilters": Array [
    Object {
      "chartType": "line",
      "color": "#06c",
      "fill": "#8bc1f7",
      "id": "Transfer-gibibytes",
      "isStacked": false,
      "isStandalone": true,
      "isThreshold": false,
      "stroke": "#06c",
      "strokeWidth": 2,
      "yAxisChartLabel": [Function],
    },
    Object {
      "chartType": "line",
      "color": "#5752d1",
      "fill": "#b2b0ea",
      "id": "Storage-gibibyte-months",
      "isStacked": false,
      "isStandalone": true,
      "isThreshold": false,
      "stroke": "#5752d1",
      "strokeWidth": 2,
      "yAxisChartLabel": [Function],
    },
    Object {
      "chartType": "line",
      "color": "#009596",
      "fill": "#a2d9d9",
      "id": "Instance-hours",
      "isStacked": false,
      "isStandalone": true,
      "isThreshold": false,
      "stroke": "#009596",
      "strokeWidth": 2,
      "yAxisChartLabel": [Function],
    },
  ],
}
`;

exports[`Product RHOSAK config should apply graph configuration: settings 1`] = `
Object {
  "isCardTitleDescription": true,
  "xAxisChartLabel": [Function],
  "yAxisTickFormat": [Function],
}
`;

exports[`Product RHOSAK config should apply subscriptions inventory configuration: filtered 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "lorem",
    },
    Object {
      "title": "hello world",
    },
    Object {
      "title": "",
    },
    Object {
      "title": "t(curiosity-inventory.label_subscription_type, {\\"context\\":\\"dolor\\"})",
    },
    Object {
      "title": "2022-01-01T00:00:00.000Z",
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"product_name\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"service_level\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"quantity\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"subscription_type\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"next_event_date\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "has_infinite_quantity": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"has_infinite_quantity\\"})",
      "value": true,
    },
    "next_event_date": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"next_event_date\\"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "product_name": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"product_name\\"})",
      "value": "lorem",
    },
    "service_level": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"service_level\\"})",
      "value": "hello world",
    },
    "total_capacity": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"total_capacity\\"})",
      "value": 2000,
    },
  },
}
`;

exports[`Product RHOSAK config should apply subscriptions inventory configuration: filtered, fallback display 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "lorem",
    },
    Object {
      "title": "",
    },
    Object {
      "title": "",
    },
    Object {
      "title": "t(curiosity-inventory.label_subscription_type, {\\"context\\":\\" \\"})",
    },
    Object {
      "title": "",
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"product_name\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"service_level\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"quantity\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"subscription_type\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"next_event_date\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "has_infinite_quantity": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"has_infinite_quantity\\"})",
      "value": true,
    },
    "next_event_date": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"next_event_date\\"})",
      "value": null,
    },
    "product_name": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"product_name\\"})",
      "value": "lorem",
    },
    "service_level": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"service_level\\"})",
      "value": null,
    },
    "total_capacity": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"total_capacity\\"})",
      "value": 2000,
    },
  },
}
`;

exports[`Product RHOSAK config should handle a custom yAxisTickFormat for floating points: yAxisTickFormat 1`] = `
Object {
  "0.00001345": "0.00001",
  "0.0000269": "0.00003",
  "0.00004035": "0.00004",
  "0.0000538": "0.00005",
  "0.00006725": "0.00007",
  "0.0000807": "0.00008",
  "0.00009415": "0.00009",
  "0.0001076": "0.00011",
  "0.00012105": "0.00012",
  "0.0001345": "0.00013",
  "0.00014795": "0.00015",
  "0.0001614": "0.00016",
  "0.00017485": "0.00017",
  "0.0001883": "0.00019",
  "0.00020175": "0.0002",
  "0.0002152": "0.00022",
  "0.00022865": "0.00023",
  "0.0002421": "0.00024",
  "0.00025555": "0.00026",
  "0.000269": "0.00027",
  "0.00028245": "0.00028",
  "0.0002959": "0.0003",
  "0.00030935": "0.00031",
  "0.0003228": "0.00032",
  "0.00033625": "0.00034",
  "0.001": "0.001",
  "0.002": "0.002",
  "0.003": "0.003",
  "0.004": "0.004",
  "0.005": "0.005",
  "0.006": "0.006",
  "0.007": "0.007",
  "0.008": "0.008",
  "0.009000000000000001": "0.009",
  "0.01": "0.01",
  "0.011": "0.011",
  "0.012": "0.012",
  "0.013000000000000001": "0.013",
  "0.014": "0.014",
  "0.015": "0.015",
  "0.016": "0.016",
  "0.017": "0.017",
  "0.018000000000000002": "0.018",
  "0.019": "0.019",
  "0.02": "0.02",
  "0.021": "0.021",
  "0.022": "0.022",
  "0.023": "0.023",
  "0.024": "0.024",
  "0.025": "0.025",
  "1": "1",
  "10": "10",
  "100": "100",
  "1000": "1K",
  "10000": "10K",
  "100000": "100K",
  "1000000": "1M",
  "10000000": "10M",
  "100000000": "100M",
  "1000000000": "1B",
  "10000000000": "10B",
  "100000000000": "100B",
  "1000000000000": "1T",
  "10000000000000": "10T",
  "11": "11",
  "110": "110",
  "1100": "1.1K",
  "11000": "11K",
  "110000": "110K",
  "1100000": "1.1M",
  "11000000": "11M",
  "110000000": "110M",
  "1100000000": "1.1B",
  "11000000000": "11B",
  "110000000000": "110B",
  "1100000000000": "1.1T",
  "11000000000000": "11T",
  "12": "12",
  "120": "120",
  "1200": "1.2K",
  "12000": "12K",
  "120000": "120K",
  "1200000": "1.2M",
  "12000000": "12M",
  "120000000": "120M",
  "1200000000": "1.2B",
  "12000000000": "12B",
  "120000000000": "120B",
  "1200000000000": "1.2T",
  "12000000000000": "12T",
  "13": "13",
  "130": "130",
  "1300": "1.3K",
  "13000": "13K",
  "130000": "130K",
  "1300000": "1.3M",
  "13000000": "13M",
  "130000000": "130M",
  "1300000000": "1.3B",
  "13000000000": "13B",
  "130000000000": "130B",
  "1300000000000": "1.3T",
  "13000000000000": "13T",
  "14": "14",
  "140": "140",
  "1400": "1.4K",
  "14000": "14K",
  "140000": "140K",
  "1400000": "1.4M",
  "14000000": "14M",
  "140000000": "140M",
  "1400000000": "1.4B",
  "14000000000": "14B",
  "140000000000": "140B",
  "1400000000000": "1.4T",
  "14000000000000": "14T",
  "15": "15",
  "150": "150",
  "1500": "1.5K",
  "15000": "15K",
  "150000": "150K",
  "1500000": "1.5M",
  "15000000": "15M",
  "150000000": "150M",
  "1500000000": "1.5B",
  "15000000000": "15B",
  "150000000000": "150B",
  "1500000000000": "1.5T",
  "15000000000000": "15T",
  "2": "2",
  "20": "20",
  "200": "200",
  "2000": "2K",
  "20000": "20K",
  "200000": "200K",
  "2000000": "2M",
  "20000000": "20M",
  "200000000": "200M",
  "2000000000": "2B",
  "20000000000": "20B",
  "200000000000": "200B",
  "2000000000000": "2T",
  "3": "3",
  "30": "30",
  "300": "300",
  "3000": "3K",
  "30000": "30K",
  "300000": "300K",
  "3000000": "3M",
  "30000000": "30M",
  "300000000": "300M",
  "3000000000": "3B",
  "30000000000": "30B",
  "300000000000": "300B",
  "3000000000000": "3T",
  "4": "4",
  "40": "40",
  "400": "400",
  "4000": "4K",
  "40000": "40K",
  "400000": "400K",
  "4000000": "4M",
  "40000000": "40M",
  "400000000": "400M",
  "4000000000": "4B",
  "40000000000": "40B",
  "400000000000": "400B",
  "4000000000000": "4T",
  "5": "5",
  "50": "50",
  "500": "500",
  "5000": "5K",
  "50000": "50K",
  "500000": "500K",
  "5000000": "5M",
  "50000000": "50M",
  "500000000": "500M",
  "5000000000": "5B",
  "50000000000": "50B",
  "500000000000": "500B",
  "5000000000000": "5T",
  "6": "6",
  "60": "60",
  "600": "600",
  "6000": "6K",
  "60000": "60K",
  "600000": "600K",
  "6000000": "6M",
  "60000000": "60M",
  "600000000": "600M",
  "6000000000": "6B",
  "60000000000": "60B",
  "600000000000": "600B",
  "6000000000000": "6T",
  "7": "7",
  "70": "70",
  "700": "700",
  "7000": "7K",
  "70000": "70K",
  "700000": "700K",
  "7000000": "7M",
  "70000000": "70M",
  "700000000": "700M",
  "7000000000": "7B",
  "70000000000": "70B",
  "700000000000": "700B",
  "7000000000000": "7T",
  "8": "8",
  "80": "80",
  "800": "800",
  "8000": "8K",
  "80000": "80K",
  "800000": "800K",
  "8000000": "8M",
  "80000000": "80M",
  "800000000": "800M",
  "8000000000": "8B",
  "80000000000": "80B",
  "800000000000": "800B",
  "8000000000000": "8T",
  "9": "9",
  "90": "90",
  "900": "900",
  "9000": "9K",
  "90000": "90K",
  "900000": "900K",
  "9000000": "9M",
  "90000000": "90M",
  "900000000": "900M",
  "9000000000": "9B",
  "90000000000": "90B",
  "900000000000": "900B",
  "9000000000000": "9T",
}
`;
